jquery-modal: added optional css class "large"

--- a/OpenWGA/plugins/afw/design/scripts/css/jquery-modal.scss
+++ b/OpenWGA/plugins/afw/design/scripts/css/jquery-modal.scss
@@ -25,8 +25,13 @@ body{
 		position: fixed;
 		overflow: auto;
 		z-index: 102;
+		
 		width: 600px;
 		margin-left: -300px;
+		&.large{
+			width: 800px;
+			margin-left: -400px;
+		}
 				
 		top: 10%;
 		left: 50%;
