#00005341: Corrected google maps module referring wrong api-URL

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/render.tml
@@ -39,8 +39,8 @@
 		</tml:script>
 		<script>
 			require(["jquery", 
-				"<tml:url type="tml" name="::js" u_noext=""/>",
-				"async!///maps.googleapis.com/maps/api/js?libraries=weather,places<tml:case condition="_apikey">&key=<tml:item name="_apikey"/></tml:case>"
+				"<tml:url type="tml" name="google-maps" medium="javascripts" u_noext=""/>",
+				"async!//maps.googleapis.com/maps/api/js?libraries=weather,places<tml:case condition="_apikey">&key=<tml:item name="_apikey"/></tml:case>"
 			], function(){
 
 				$(function(){
