--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules/settings.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules/settings.tml
@@ -100,6 +100,7 @@
 	
 			<div>
 				<tml:include designdb="{_designdb}" ref="{_tml}" o_ns="{tmlform.mod_id}" tmlscope="{tmlform.mod_id}">
+					<tml:option name="$$wga_defaultlabellanguage">de</tml:option>
 					<tml:option name="parent-scope" expression="tmlform.parent_mod_id"/>
 					<tml:option name="cm_dbkey" expression="context('main').meta('db', 'dbkey')"/>
 				</tml:include>
