--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tabs/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tabs/render.tml
@@ -49,14 +49,14 @@
 			$("#module-<tml:option name="ns"/> .tabs a").removeClass("current");
 			$(this).addClass("current");
 			var index = $("#module-<tml:option name="ns"/> .tabs li a").index(this);
-			$("#module-<tml:option name="ns"/> .pane").hide().eq(index).show();
+			$("#module-<tml:option name="ns"/> .pane").removeClass("active").eq(index).addClass("active");
 			WGA.event.fireEvent("CMM-element-activated", "CMM", {
 				el: $("#module-<tml:option name="ns"/> .pane").eq(index)[0]
 			})
 		})
-		$(function(){
-			$("#module-<tml:option name="ns"/> .tabs a").first().addClass("current");
-			$("#module-<tml:option name="ns"/> .pane").first().show();
-		})
+		
+		$("#module-<tml:option name="ns"/> .tabs a").first().addClass("current");
+		$("#module-<tml:option name="ns"/> .pane").first().addClass("active");
+
 	});
 </script>
