#00005389: content module "children": don't hide current page in link-list

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/layout/link-list.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/layout/link-list.tml
@@ -51,7 +51,7 @@
 		</tml:elseif>
 	</tml:if>
 	
-	<li>
+	<li <tml:case isselected="true">class="selected"</tml:case>>
 		<tml:[util:link]/>
 		<tml:case condition="$option_show_description && DESCRIPTION">
 			<div class="description"><tml:metadata name="description"/></div>
