--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/children.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/children.tml
@@ -41,7 +41,7 @@
 	
 </tml:script>
 <tml:case context="{_context}" iscontextvalid="true">
-	<tml:children id="{scoped:child-collection}" exclude="main"/>
+	<tml:children id="{scoped:child-collection}"/>
 	<div class="<tml:item name="{scoped:class}"/> <tml:[setting] o_name="layout"/>">
 		<tml:include ref="[::layout:{_layout}]" 
 			o-sortorder="_sortorder" 
