#00005390: cm-neo dialog "create-page": use defaults for language and contenttype

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
@@ -18,6 +18,8 @@
 
 <tml:script>
 	_opts = option("dialog_options")
+	setOption("current_lang", LANGUAGE);
+	setOption("current_pagetype", CONTENTTYPE);
 </tml:script>
 
 <tml:form id="form-create-page" source="portlet" context="[$struct:{_opts.parent || document.getStructKey()}]">
