--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/form.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/form.tml
@@ -12,6 +12,8 @@
 	}
 	if($option_dialog_options.pagetype && pagetypes.contains($option_dialog_options.pagetype))
 		tmlform.contenttype=$option_dialog_options.pagetype
+	else if(!tmlform.submitted && $option_current_pagetype && pagetypes.contains($option_current_pagetype))
+		tmlform.contenttype=$option_current_pagetype
 	else if(pagetypes.size()==1)
 		tmlform.contenttype = pagetypes.get(0);
 	
@@ -23,8 +25,11 @@
 
 	_languages = WGA.createList()
 	for(let lang in Iterator(db().getLanguages().values())){
-		if(lang.mayCreateContent())
+		if(lang.mayCreateContent()){
 			_languages.add(lang.title + "|" + lang.name)
+			if($option_current_lang==lang.name && !tmlform.submitted)
+				tmlform.language=lang.name
+		}
 	}
 	WGA.TMLPage.setVar("_languages", _languages)
 	if(_languages.size()==1)
