--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render.tml
@@ -1,6 +1,3 @@
-<tml:script>
-	_space = CMM.setting('space')/2;
-</tml:script>
-<div class="tiles" style="margin: <tml:script expression="_space*2" format="0"/>px -<tml:item name="_space" format="0"/>px">
-	<tml:include ref="system:include-child-modules" o-margins="false" o-raw="true" o-space="_space"/>
+<div class="tiles">
+	<tml:include ref="system:include-child-modules" o-margins="false" o-raw="true"/>
 </div>
