--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -1,18 +1,23 @@
 <tml:include designdb="@afw" medium="jss" ref="toCSS" o_scope=".module-cm_tiles">
 
-	margin_bottom: "0 !important",
+	"+ .module-cm_tiles": {
+		// if we have a followin tile module remove default module margin 
+		margin_top: "-10px"
+	},
 
 	">.tiles": {
 		display: "flex",
 		
+		margin: "0 -10px",
+		
 		">.tile":{
 			box_sizing: "border-box",
 			margin: 0,
+			padding: "10px",
 			">.content":{
 				height: "100%",
 				box_sizing: "border-box",
 				display: "flex",
-				justify_content: "space-between",	// Default
 				flex_direction: "column",
 				
 				background_position: "center",
@@ -35,6 +40,15 @@
 				
 			}
 
+		}
+	},
+	
+	"&.no-margins": {
+		">.tiles": {
+			margin: 0,
+			">.tile":{
+				padding: 0
+			}	
 		}
 	}
 	
