--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/content-modules/portlet-module-settings.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/content-modules/portlet-module-settings.tml
@@ -58,6 +58,7 @@
 <tml:input name="title" type="hidden" store="false"/>
 
 <tml:input name="mod_title" type="hidden" store="false"/>
+<tml:input name="module_id" type="hidden" store="false"/>
 <tml:input name="mod_id" type="hidden" store="false"/>
 <tml:input name="parent_mod_id" type="hidden" store="false"/>
 <tml:input name="ids_to_duplicate" type="hidden" store="false"/>
@@ -70,6 +71,7 @@
 			form.designdb.value = config.designdb;
 			form.settingstml.value = config.settingstml||"";
 			form.title.value=config.title;
+			form.module_id.value = config.id;
 		}
 		else {
 			form.title.value="";
@@ -127,6 +129,12 @@
 				if(tmlform.field("setting_source_"+tmlform.mod_id)=="template")
 					_mode = "view";
 				else _mode = option("mode");
+
+				_classes = WGA.createList()
+				if(tmlform.module_id){
+					_classes.addAll(CMM.getModuleCssClasses(tmlform.module_id))
+				}
+
 			</tml:script>
 	
 			<div>
@@ -135,6 +143,12 @@
 					<tml:option name="parent-scope" expression="tmlform.parent_mod_id"/>
 					<tml:option name="cm_dbkey" expression="context('main').meta('db', 'dbkey')"/>
 				</tml:include>
+				<tml:case condition="_classes.size()">
+					<label><tml:label key="module-style"/></label>
+					<div style="margin:10px">
+						<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="checkbox" optionsitem="_classes"/>
+					</div>
+				</tml:case>					
 			</div>
 		</tml:case>
 	</tml:then>
