updated style tile.border

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -30,8 +30,8 @@
 				
 				"&.border": {
 					border: "solid silver 1px",
-					".rtf": {
-						padding: 10				
+					".module-cm_rtf": {
+						margin: 10
 					}
 				},
 				
